--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Meu site</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <h1>
+            Aprendendo a usar o Git Hub
+        </h1>
     </body>
 </html>
