Alteração (2) no arquivo index.html

--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@ and open the template in the editor.
         <h1>
             Aprendendo a usar o Git Hub
         </h1>
+        <div>
+            Lorem Ipsum
+        </div>
     </body>
 </html>
