--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@ and open the template in the editor.
         <h1>
             Aprendendo a usar o Git Hub
         </h1>
+
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="contato.html">Contato</a></li>
+        </ul>
+
         <div>
             Lorem Ipsum
         </div>
